# cpp_library_template

./: .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  README.md  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: learn-github-actions.yml
include/: hello_world.hpp
src/: BUILD  BUILD.bazel  CMakeLists.txt  hello_world.cpp  string_reversal.cpp
src/include/: hello_world.hpp  string_reversal.hpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  example.cpp
tests/: BUILD.bazel  CMakeLists.txt  hello_world_unit.cpp  main.cpp  string_reversal_unit.cpp
tests/unit/: BUILD  BUILD.bazel  CMakeLists.txt
tests/unit/src/: hello_world_unit.cpp  string_reversal_unit.cpp
