# by default make targets in this package visible to all packages
# in the cpp_library_template package group
package(default_visibility = ["//:cpp_library_template"])

cc_library(
    name = "hello_world",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["include/*.hpp"]),
    strip_include_prefix = "include",
    deps = ["@ms-gsl//:ms-gsl"]
)
